--- a/main/webapp/styles/welcome.css
+++ b/main/webapp/styles/welcome.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
 }
 .element{
-    width: 25vw;
+    width: 35vw;
+    margin-left: 10px;
     padding: 35px;
     border-style: outset;
 }
